Update name in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "empoweryouth",
+    "name": "empower_youth/webapp",
     "description": "Career Development Platform",
     "homepage": "https://www.empoweryouth.com",
     "type": "project",
