--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "yiisoft/yii2-authclient": "^2.2",
         "sendgrid/sendgrid": "^7.8",
         "sociallydev/spaces-api": "v2",
-        "razorpay/razorpay": "2.*"
+        "razorpay/razorpay": "^2.5",
+        "sammaye/yii2-audittrail": "^1.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
