--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "sendgrid/sendgrid": "^7.8",
         "sociallydev/spaces-api": "v2",
         "razorpay/razorpay": "^2.5",
-        "sammaye/yii2-audittrail": "^1.3"
+        "sammaye/yii2-audittrail": "^1.3",
+        "thamtech/yii2-jws": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
